--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "laravel/framework": "^10.0",
+        "laravel/framework": "^10.0|^11.0",
         "asseco-voice/laravel-common": "^3.0"
     },
     "require-dev": {
