--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "php": "^8.1",
         "laravel/framework": "^10.0|^11.0",
-        "asseco-voice/laravel-common": "^3.0"
+        "asseco-voice/laravel-common": "dev-laravel-11"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
@@ -14,6 +14,12 @@
         "orchestra/testbench": "^8.5",
         "doctrine/dbal": "^3.0"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/markcameron/laravel-common"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "Asseco\\CustomFields\\": "src/"
