--- a/composer.json
+++ b/composer.json
@@ -3,18 +3,22 @@
     "description": "Laravel support for custom fields",
     "license": "MIT",
     "require": {
-        "php": "^8.1",
-        "laravel/framework": "^10.0|^11.0",
+        "php": "^8.3",
+        "laravel/framework": "^11.0",
         "asseco-voice/laravel-common": "dev-laravel-11"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0",
+        "phpunit/phpunit": "^11.0",
         "mockery/mockery": "^1.4.4",
         "fakerphp/faker": "^1.9.1",
-        "orchestra/testbench": "^8.5",
+        "orchestra/testbench": "^9.0",
         "doctrine/dbal": "^3.0"
     },
     "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/markcameron/laravel-blueprint-audit"
+        },
         {
             "type": "vcs",
             "url": "https://github.com/markcameron/laravel-common"
@@ -36,5 +40,7 @@
                 "Asseco\\CustomFields\\CustomFieldsServiceProvider"
             ]
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
